--- a/strona.html
+++ b/strona.html
@@ -17,9 +17,9 @@
 </head>
 <body>
     <h1>Marek Marecki</h1>
-    <img src="marek-marecki.jpg" alt="Marek Marecki" width="300">
+    <img src="https://previews.123rf.com/images/auremar/auremar1209/auremar120905219/15411924-portret-u%C5%9Bmiechni%C4%99ty-cz%C5%82owiek-studio-shot.jpg" alt="Marek Marecki" width="300">
     <p>Obrazy Marka Mareckiego zostały wystawione w renomowanych galeriach sztuki na całym świecie, a ich wartość stale rośnie. Jego prace zdobyły uznanie zarówno wśród kolekcjonerów sztuki, jak i krytyków.</p>
-    <p>Jeśli chcesz zobaczyć więcej dzieł Marka Mareckiego lub skontaktować się z nim, odwiedź jego stronę internetową: <a href="http://www.marek-marecki.com">www.marek-marecki.com</a>.</p>
+    <p>Jeśli chcesz zobaczyć więcej dzieł Marka Mareckiego lub skontaktować się z nim, odwiedź jego stronę internetową: <a href="">tu bedzie strona</a>.</p>
    
 </body>
 </html>
