--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Marek Marecki</h1
-    <p>Marek Marecki <a href="https://github.com/232299/wizytowka.github.io/blob/main/zdjecia.html">zdjecua</a>.</p>
+    <p>Marek Marecki <a href="https://github.com/232299/wizytowka.github.io/blob/main/zdjecia.html">zdjecia</a>.</p>
     <p>Aby dowiedzieć się więcej o innych artystach, odwiedź naszą <a href="druga-strona.html">drugą stronę</a>.</p>
 </body>
 </html>
